--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -14,10 +14,10 @@
 
     <div class="choose-seats">
         <div class="seats-type" style="width:270px">
-            <a href="#" id="seat4" ng-click="select_seat(4)" class="sone"><img src="" alt="4 chỗ" height="26" width="26"><span class="small">4 chỗ</span></a>
-	    <a href="#" id="seat5" ng-click="select_seat(5)" class="sone"><img src="" alt="5 chỗ" height="26" width="26"><span class="small">5 chỗ</span></a>
-            <a href="#" id="seat7" ng-click="select_seat(7)" class="sone"><img src="" alt="7 chỗ" height="26" width="26"><span class="small">7 chỗ</span></a>
-            <a href="#" id="seat16" ng-click="select_seat(16)" class="sone"><img src="" alt="16 chỗ" height="26" width="26"><span class="small">16 chỗ</span></a>
+            <a href="#" id="seat4" ng-click="select_seat(4)" class="sone"><span class="large">4 chỗ</span></a>
+	    <a href="#" id="seat5" ng-click="select_seat(5)" class="sone"><span class="large">5 chỗ</span></a>
+            <a href="#" id="seat7" ng-click="select_seat(7)" class="sone"><span class="large">7 chỗ</span></a>
+            <a href="#" id="seat16" ng-click="select_seat(16)" class="sone"><span class="large">16 chỗ</span></a>
             <div class="clearfix"></div>
         </div>
         <input type="hidden" id="seat" name="seat"/>
