--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -50,7 +50,7 @@
 
             </ion-list>
 	    </br>
-	    <center><b>Liên hệ: <a href="tel:+842466661669">024.6666.1669</a></b></center></br>
+	    <center><b>Liên hệ: <a href="tel:+84‭986633590‬">‭0986.633.590‬</a></b></center></br>
 	    <center>(c) noibaiconnect.com.vn</center>
         </ion-content>
     </ion-side-menu>
