--- a/www/templates/tab-price.html
+++ b/www/templates/tab-price.html
@@ -1,8 +1,84 @@
-<ion-view view-title="Bảng giá">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3mobile.css">
+<style> 
+p.wordwrap {
+    width: 11em; 
+    border: 1px solid #000000;
+    word-wrap: break-word;
+}
+</style>
+
+<ion-view view-title="Chats">
   <ion-content>
 	</br>
 	</br>
-<p class="Info"><center>BẢNG GIÁ noibaiconnect.com.vn</center></br>
+<p class="Info"><center>BẢNG GIÁ TAXI ĐÔNG DƯƠNG D.C</center></br>
+<div class="table-responsive">
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Địa điểm/Loại xe</th>
+        <th class="success">4 chỗ</th>
+        <th class="danger">5 chỗ</th>
+        <th class="warning">7 chỗ</th>
+        <th>16 chỗ</th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <tr>
+        <td>Cầu Giấy</td>
+        <td>190</td>
+        <td>190</td>
+        <td>300</td>
+        <td>300</td>
+      </tr>
+      <tr>
+        <td>Đống Đa</td>
+        <td>190</td>
+        <td>190</td>
+        <td>300</td>
+        <td>300</td>
+      </tr>
+      <tr>
+        <td>Ba Đình</td>
+        <td>190</td>
+        <td>190</td>
+        <td>300</td>
+        <td>300</td>
+      </tr>
+      <tr>
+        <td>Hai Bà Trưng</td>
+        <td>190</td>
+        <td>190</td>
+        <td>300</td>
+        <td>300</td>
+      </tr>
+      <tr>
+        <td>Nam Từ Liêm</td>
+        <td>190</td>
+        <td>190</td>
+        <td>300</td>
+        <td>300</td>
+      </tr>
+      <tr>
+        <td>Bắc Từ Liêm</td>
+        <td>190</td>
+        <td>190</td>
+        <td>300</td>
+        <td>300</td>
+      </tr>
+      <tr>
+        <td>Gia Lâm</td>
+        <td>300</td>
+        <td>300</td>
+        <td>700</td>
+        <td>700</td>
+      </tr>                  
+    </tbody>
+
+  </table>
+</div>
 </br>
 </p>
 
